--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -1,11 +1,21 @@
-<%= render layout: "auth_layout", locals: { title: "Edit account" }  do %>
+<%= render layout: "auth_layout", locals: { title: "Edit account" } do %>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), html: { method: :put }, data: { turbo: false }) do |f| %>
 
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="mb-6">
+      <%= f.label :profile_image, class: label_class %>
+      <%= f.file_field :profile_image, class: "block w-full text-sm text-slate-500 file:mr-4 file:py-2 file:px-4 file:border-0 file:text-sm file:font-semibold file:bg-yellow-400 file:text-white hover:file:bg-yellow-500 file:rounded-full" %>
+    </div>
+
+    <div class="mb-6">
       <%= f.label :name, class: label_class %>
       <%= f.text_field :name, class: input_class %>
+    </div>
+
+    <div class="mb-6">
+      <%= f.label :username, class: label_class %>
+      <%= f.text_field :username, class: input_class %>
     </div>
 
     <div class="mb-6">
@@ -22,8 +32,10 @@
     <div class="mb-6">
       <%= f.label :password, class: label_class %>
       <%= f.password_field :password, autocomplete: "new-password", class: input_class %>
-      <p class="pt-1 text-xs italic text-gray-500"> <% if @minimum_password_length %>
-          <%= @minimum_password_length %> characters minimum <% end %> (leave blank if you don't want to change it)</p>
+      <p class="pt-1 text-xs italic text-gray-500">
+        <% if @minimum_password_length %>
+          <%= @minimum_password_length %> characters minimum
+        <% end %> (leave blank if you don't want to change it)</p>
     </div>
 
     <div class="mb-6">
