--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,10 +1,15 @@
-<%= render layout: "auth_layout", locals: { title: "Sign up" }  do %>
+<%= render layout: "auth_layout", locals: { title: "Sign up" } do %>
   <%= form_for(resource, as: resource_name, url: registration_path(resource_name), data: { turbo: false }) do |f| %>
     <%= render "devise/shared/error_messages", resource: resource %>
 
     <div class="mb-6">
       <%= f.label :name, class: label_class %>
       <%= f.text_field :name, class: input_class %>
+    </div>
+
+    <div class="mb-6">
+      <%= f.label :username, class: label_class %>
+      <%= f.text_field :username, class: input_class %>
     </div>
 
     <div class="mb-6">
@@ -16,7 +21,8 @@
       <div class="flex">
         <%= f.label :password, class: label_class %>
         <% if @minimum_password_length %>
-          <span class="pl-1 text-xs text-gray-600 mt-1"><em>(<%= @minimum_password_length %> characters minimum)</em></span>
+          <span class="pl-1 text-xs text-gray-600 mt-1"><em>(<%= @minimum_password_length %>
+            characters minimum)</em></span>
         <% end %>
       </div>
       <%= f.password_field :password, autocomplete: "new-password", class: input_class %>
