--- a/app/views/meows/_form.html.erb
+++ b/app/views/meows/_form.html.erb
@@ -1,13 +1,10 @@
 <%= form_with model: @meow, data: { controller: "reset-form", action: "turbo:submit-end->reset-form#reset" } do |form| %>
 
-  <% if form.object.errors.any? %>
+  <% if flash[:meow_errors] %>
     <div class="bg-red-50 text-red-500 px-3 py-2 font-medium rounded-lg mt-3 mx-3">
-      <h2><%= pluralize(form.object.errors.count, "error") %>
-        prevented this Meow from being saved:</h2>
-
       <ul>
-        <%= form.object.errors.each do |error| %>
-          <li><%= error.full_message %></li>
+        <% flash[:meow_errors].each do |error| %>
+          <li><%= error %></li>
         <% end %>
       </ul>
     </div>
