--- a/app/views/meows/_meow.html.erb
+++ b/app/views/meows/_meow.html.erb
@@ -1,2 +1,12 @@
-<%= meow.body %>
-<%= meow.user.id %>
+<div class="px-6 py-3" id="<%= dom_id(meow) %>">
+  <div class="flex space-x-3 items-start pb-3">
+    <%= profile_image(meow.user) %>
+  </div>
+  <div class="flex-1">
+    <p class="font-bold"><%= link_to meow.user.name, profile_path(meow.user), class: "hover:underline", data: { turbo: false } %></p>
+  </div>
+  <div class="prose prose-lg"><%= meow.body %></div>
+
+  <%= render "controls", meow: meow %>
+
+</div>
