--- a/app/views/meows/destroy.turbo_stream.erb
+++ b/app/views/meows/destroy.turbo_stream.erb
@@ -1,5 +1,5 @@
 <%= turbo_stream.remove(@meow) %>
 
 <%= turbo_stream.update "empty" do %>
-  <%= render "empty" %>
+  <%= render "meows/empty" %>
 <% end %>
