--- a/app/views/comments/create.turbo_stream.erb
+++ b/app/views/comments/create.turbo_stream.erb
@@ -1,3 +1,7 @@
 <%= turbo_stream.prepend "#{dom_id(@meow)}_comments" do %>
   <%= render "comment", comment: @comment %>
 <% end %>
+
+<%= turbo_stream.replace "#{dom_id(@meow)}_comments_count" do %>
+  <%= render "meows/comments_count", meow: @meow %>
+<% end %>
