--- a/app/views/meows/_controls.html.erb
+++ b/app/views/meows/_controls.html.erb
@@ -2,31 +2,40 @@
   <li>
 
     <%= link_to meow, class: "text-gray-500 space-x-2 group flex items-center justify-center", data: { turbo: false } do %>
-      <%= render "svg/comment" %>
-      <span class="group-hover:text-sky-500 text-gray-500">3</span>
+      <div class="flex items-center justify-center w-10 h-10 rounded-full hover:bg-sky-50">
+        <%= render "svg/comment" %>
+      </div>
+      <%= turbo_frame_tag "#{dom_id(meow)}_comments_count" do %>
+        <%= render "meows/comments_count", meow: meow %>
+      <% end %>
     <% end %>
 
     <% if user_signed_in? && meow.user_id != current_user.id %>
       <li>
         <%= button_to remeow_meow_path(meow), method: :post, class: "text-gray-500 space-x-2 group flex items-center justify-center" do %>
-          <%= render "svg/remeow" %>
-          <span class="group-hover:text-green-500 text-gray-500">3</span>
+          <div class="flex items-center justify-center w-10 h-10 rounded-full hover:bg-green-50">
+            <%= render "svg/remeow" %>
+          </div>
+          <%= turbo_frame_tag "#{dom_id(meow)}_remeows_count" do %>
+            <% render "meows/remeows_count", meow: meow %>
+          <% end %>
         <% end %>
       </li>
     <% end %>
 
     <li>
-      <a href="#" class="text-gray-500 space-x-2 group flex items-center justify-center">
-        <%= render "svg/like" %>
-        <span class="group-hover:text-rose-500 text-gray-500">3</span>
-      </a>
+      <%= content_tag :div, class: "#{dom_id(meow)}_likes" do %>
+        <%= render "likes/likes", likeable: meow %>
+      <% end %>
     </li>
 
     <% if user_signed_in? && current_user == meow.user %>
       <li>
         <%= button_to meow_path(meow), method: :delete, form: { data: { turbo_confirm: "Are you sure?" } },
                       class: "text-gray-500 space-x-2 group flex items-center justify-center" do %>
-          <%= render "svg/delete" %>
+          <div class="flex items-center justify-center w-10 h-10 rounded-full hover:bg-gray-50">
+            <%= render "svg/delete" %>
+          </div>
         <% end %>
       </li>
     <% end %>
