--- a/app/views/meows/remeow.turbo_stream.erb
+++ b/app/views/meows/remeow.turbo_stream.erb
@@ -1,3 +1,3 @@
-<%= turbo_stream.prepend "meows" do %>
-  <%= render "meows/remeow", meow: @remeow %>
+<%= turbo_stream.replace_all "#{dom_id(@meow)}_remeows_count" do %>
+  <%= render "meows/remeows_count", meow: @meow %>
 <% end %>
