--- a/app/views/meows/show.html.erb
+++ b/app/views/meows/show.html.erb
@@ -1,11 +1,7 @@
 <div class="p-6">
   <div class="flex items-center space-x-3">
     <%= link_to root_path, class: "rounded-full w-8 h-8 flex items-center justify-center hover:bg-gray-100 duration-300 transition-all" do %>
-      <svg viewBox="0 0 24 24" aria-hidden="true" class="fill-current text-gray-800 w-5 h-5">
-        <g>
-          <path d="M20 11H7.414l4.293-4.293c.39-.39.39-1.023 0-1.414s-1.023-.39-1.414 0l-6 6c-.39.39-.39 1.023 0 1.414l6 6c.195.195.45.293.707.293s.512-.098.707-.293c.39-.39.39-1.023 0-1.414L7.414 13H20c.553 0 1-.447 1-1s-.447-1-1-1z"></path>
-        </g>
-      </svg>
+      <%= render "svg/left-arrow" %>
     <% end %>
     <h1 class="font-bold text-2xl">Meowz</h1>
   </div>
@@ -31,13 +27,11 @@
 
   <ul class="py-3 border-t text-gray-700 flex space-x-4 text-sm">
     <li>
-      <span class="font-semibold text-gray-800">3</span> Remeowz
+      <span class="font-semibold text-gray-800"><%= Meow.where(meow_id: @meow).size %></span> Remeowz
     </li>
+
     <li>
-      <span class="font-semibold text-gray-800">4</span> Quote Meowz
-    </li>
-    <li>
-      <span class="font-semibold text-gray-800">4</span> Likes
+      <span class="font-semibold text-gray-800"><%= @meow.likes.size %></span> Likes
     </li>
   </ul>
 
