--- a/app/views/profiles/show.html.erb
+++ b/app/views/profiles/show.html.erb
@@ -13,7 +13,11 @@
       <%= link_to "Edit profile", edit_user_registration_path, class: "inline-flex justify-center items-center px-5 py-2 rounded-full border ring-4 focus:ring-sky-50 ring-transparent hover:ring-sky-50 hover:border-gray-300" if current_user %>
     </div>
   </div>
-  <ul class="list-none divide-y -mx-6 mt-10">
-    <%= render collection: @profile.meows, partial: "meows/meow" %>
-  </ul>
+
+  <div class="mt-10 -mx-6">
+    <% @profile.meows.each do |meow| %>
+      <%= render partial: "meows/#{meow.meow_type}", locals: { meow: meow } %>
+    <% end %>
+  </div>
+
 </div>
