--- a/app/views/shared/_head.html.erb
+++ b/app/views/shared/_head.html.erb
@@ -1,13 +1,14 @@
- <head>
+<head>
   <title>
-    <%= content_for?(:title) ? yield(:title) : "Kickoff Tailwind" %>
+    <%= content_for?(:title) ? yield(:title) : "Meowzy" %>
   </title>
 
   <%= csrf_meta_tags %>
   <%= csp_meta_tag %>
 
   <meta name="viewport" content="width=device-width, initial-scale=1">
-  <%= stylesheet_link_tag  'application', 'data-turbolinks-track': 'reload' %>
+  <%= favicon_link_tag asset_path('favicon.ico') %>
+  <%= stylesheet_link_tag 'application', 'data-turbolinks-track': 'reload' %>
   <%= javascript_include_tag "application", defer: true %>
   <%#= javascript_include_tag 'https://js.stripe.com/v3/', 'data-turbolinks-track': 'reload' %>
 </head>
